tree-sitter-clapse/corpus/case_multiline_let.txt
==================
case multiline let arm body
==================

sum_slice cells start span = case (span == 0) (span == 1) of
  1 _ -> 0
  _ 1 -> slice_get_u8 cells start
  _ _ ->
    let half = span / 2
        left_sum = sum_slice cells start half
        right_start = start + half
        right_span = span - half
        right_sum = sum_slice cells right_start right_span
    in left_sum + right_sum

---

(module
  (function_declaration
    name: (identifier)
    argument: (identifier)
    argument: (identifier)
    argument: (identifier)
    value: (case_expression
      scrutinee: (parenthesized_expression
        (infix_expression
          left: (identifier)
          operator: (infix_operator)
          right: (integer)))
      scrutinee: (parenthesized_expression
        (infix_expression
          left: (identifier)
          operator: (infix_operator)
          right: (integer)))
      branch: (case_branch
        pattern: (case_pattern_atom (integer))
        pattern: (case_pattern_atom (wildcard))
        result: (integer))
      branch: (case_branch
        pattern: (case_pattern_atom (wildcard))
        pattern: (case_pattern_atom (integer))
        result: (application_expression
          function: (identifier)
          argument: (identifier)
          argument: (identifier)))
      branch: (case_branch
        pattern: (case_pattern_atom (wildcard))
        pattern: (case_pattern_atom (wildcard))
        result: (let_expression
          binding: (let_value_binding
            name: (identifier)
            value: (infix_expression
              left: (identifier)
              operator: (infix_operator)
              right: (integer)))
          binding: (let_value_binding
            name: (identifier)
            value: (application_expression
              function: (identifier)
              argument: (identifier)
              argument: (identifier)
              argument: (identifier)))
          binding: (let_value_binding
            name: (identifier)
            value: (infix_expression
              left: (identifier)
              operator: (infix_operator)
              right: (identifier)))
          binding: (let_value_binding
            name: (identifier)
            value: (infix_expression
              left: (identifier)
              operator: (infix_operator)
              right: (identifier)))
          binding: (let_value_binding
            name: (identifier)
            value: (application_expression
              function: (identifier)
              argument: (identifier)
              argument: (identifier)
              argument: (identifier)))
          body: (infix_expression
            left: (identifier)
            operator: (infix_operator)
            right: (identifier)))))))
